// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar component renders a search bar with a default value 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    type="text"
    value={null}
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`SearchBar component renders a search bar with a supplied value 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    type="text"
    value="potato"
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;
